darkmatter/lib/tests/l1/snapshots/l1__schemas_convert_snapshots__snapshot_atom_boolish.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 95
expression: "convert_atom(\"boolish\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "anyOf": [
            {
              "type": "boolean"
            },
            {
              "enum": [
                "true",
                "false",
                "True",
                "False",
                "TRUE",
                "FALSE"
              ]
            }
          ]
        }
      ]
    }
  },
  "type": "object"
}
