darkmatter/lib/tests/l1/snapshots/l1__schemas_convert_snapshots__snapshot_atom_numberlike.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 85
expression: "convert_atom(\"numberlike\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "anyOf": [
            {
              "type": "number"
            },
            {
              "pattern": "^-?\\d+(\\.\\d+)?$",
              "type": "string"
            }
          ]
        }
      ]
    }
  },
  "type": "object"
}
