darkmatter/lib/tests/l1/snapshots/l1__schemas_convert_snapshots__snapshot_atom_string_min_max.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 45
expression: "convert_atom(\"string(min(5); max(80))\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "maxLength": 80,
          "minLength": 5,
          "type": "string"
        }
      ]
    }
  },
  "type": "object"
}
