darkmatter/lib/tests/l1/snapshots/l1__schemas_convert_snapshots__snapshot_atom_string_pattern.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
assertion_line: 55
expression: "convert_atom(\"string(pattern(^[a-z]+$))\")"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "field": {
      "anyOf": [
        {
          "type": "null"
        },
        {
          "pattern": "^[a-z]+$",
          "type": "string"
        }
      ]
    }
  },
  "type": "object"
}
